# YOWOv2-PL

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: yowov2_nano_ucf24_jhmdb21.yaml  yowov2_nano_ucf24_jhmdb21_ver2.yaml  yowov2_nano_ucf24_jhmdb21_ver3.yaml  yowov2_tiny_ucf24_jhmdb21 copy.yaml  yowov2_tiny_ucf24_jhmdb21.yaml
notebooks/: yowov2-kaggle.ipynb
tests/: test_data_module.py
tools/: requirements.txt  train.py
yowo/: cli.py
yowo/data/: __init__.py  datamodule.py  utils.py
yowo/data/dataset/: ava.py  ava_helper.py  transforms.py  ucf_jhmdb.py
yowo/models/: __init__.py  lightning_model.py  schemas.py  types.py  warmup.py
yowo/models/backbone2d/: __init__.py  blurpool2d.py
yowo/models/backbone2d/yolo_free/: backbone.py  config.py  fpn.py  head.py  model.py  neck.py  types.py
yowo/models/backbone3d/: __init__.py  config.py  resnet.py  resnext.py  shufflenetv2.py  types.py
yowo/models/basic/: types.py  utils.py
yowo/models/yowov2/: encoder.py  head.py  loss.py  matcher.py  model.py
yowo/schedulers/: __init__.py  warmup.py
yowo/utils/: box_ops.py  distributed_utils.py  nms.py  validate.py  weight_init.py
